manifests/custom-apps/demo-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo-api
  labels:
    app: demo-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30070
    protocol: TCP
    name: http
  selector:
    app: demo-api
